--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ejs": "^2.6.1",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
     "react": "^15.4.1",
